I noticed that the weird behavior between the Modal and the picture grid stemmed from the fact that the picture grid was a flex display, and whenever the modal had its display set then it would be added to the tree, causing the modal to draw behind the grid (solved a few branches ago) and, most recently, push the grid to the left. Now, with visibility, we're just telling the dom that this element is there, but it cannot be seen or interacted with. For our use case it is a better approach. Also, I'll keep the z-index like this because if we remove it then the modal will draw right next to the grid. Also adding some css for the second button

--- a/client/components/modal/modal.css
+++ b/client/components/modal/modal.css
@@ -1,8 +1,8 @@
 #modal {
   font-family: "Open Sans", sans-serif;
-  display: none;
+  visibility: hidden;
   position: fixed;
-  z-index: 1;
+  z-index: 100;
   padding-top: 30%;
   left: 0;
   top: 0;
@@ -25,4 +25,9 @@
   float: right;
   font-size: 28px;
   font-weight: bold;
+  margin-left: 5%;
+}
+
+.button-group {
+  justify-content: space-between;
 }
